--- a/ext/lib/translations/lib/es.json
+++ b/ext/lib/translations/lib/es.json
@@ -24,8 +24,8 @@
   "admin-topics-form.description.tags": "Etiquetas para el eje/propuesta, separarlos apretando ENTER o TAB",
   "admin-topics-form.description.author": "Nombre del autor u organismo responsable",
   "admin-topics-form.description.authorUrl": "URL con información del autor",
-  "admin-topics-form.placeholder.author": "Municipio de Sunchales",
-  "admin-topics-form.placeholder.authorUrl": "https://www.sunchales.gob.ar/participa",
+  "admin-topics-form.placeholder.author": "Opinión Pública",
+  "admin-topics-form.placeholder.authorUrl": "https://funpublica.com.ar/",
   "admin-sidebar.comments.title": "Comentarios y estadisticas",
   "admin-stats.comments.adminMarks.important": "Destacado",
   "admin-stats.comments.adminMarks.derive": "Derivar",
