--- a/ext/lib/translations/lib/es.json
+++ b/ext/lib/translations/lib/es.json
@@ -1,3 +1,4 @@
+
 {
   "settings.sidebar.forums": "Consultas",
   "newsfeed.call-to-action.manage-forums": "Consultas",
@@ -59,5 +60,11 @@
   "comments.your.arguments": "Tus comentarios",
   "proposal-options.must-be-signed-in": "Debés estar registrado para participar",
   "forum.form.rich.summary.label": "Resumen largo",
-  "forum.form.contentType.label": "Tipo de contenido"
+  "forum.form.contentType.label": "Tipo de contenido",
+  "signup.browsing": "empezar",
+  "signup.check-email": "Por favor, no te olvides de revisar el correo no deseado.",
+  "signup.now-can-vote": "¡Ya podés empezar a participar en Opinión Pública!",
+  "signup.received": "Te enviamos un correo electrónico para que puedas validar tu registro. ",
+  "signup.resend-validation-email": "¿No lo recibiste? Reenviar correo de validación.",
+  "signup.welcome": "¡Ya falta poco, {name}!"
 }
